Textlayer visible, now I am missing the correct offset to pdf container

--- a/example/style.css
+++ b/example/style.css
@@ -6,3 +6,21 @@
 .rotate180 {-webkit-transform: rotate(180deg); transform: rotate(180deg); }
 .rotate270 {-webkit-transform: rotate(270deg); transform: rotate(270deg); }
 .fixed { position: fixed; top: 0; left: calc(50% - 480px); z-index: 100; width: 100%; padding: 1em; background: rgba(238, 238, 238,.9); width: 960px; }
+textlayer {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    color: #000;
+    font-family: sans-serif;
+    overflow: hidden;
+}
+
+textlayer > div {
+    color: black;
+    position: absolute;
+    line-height: 1;
+    white-space: pre;
+    cursor: text;
+}
